# tcode

./: .gitignore  LICENSE  MANIFEST.in  README.md  permissions.json  pyproject.toml  requirements.txt  tcode.json  tcode.py  tcode.sqlite3  tcode_app.py
.tcode/skills/playwright-cli/: SKILL.md
tcode/: __init__.py  __main__.py  agent.py  agent_defs.py  attachments.py  builtin_tools.py  cli.py  command.py  config.py  event.py  instance.py  jsonschema_util.py  mcp.py  mcp_auth.py  mcp_finish.py  mcp_oauth.md  mcp_transports.py  memory.py  permission_next.py  permissions.py  plan.py  server.py  session.py  session_compaction.py  session_lifecycle.py  session_summary.py  snapshot.py  storage.py  storage_file.py  storage_sqlite.py  subagent.py  todos.py  toolrunner.py  tools.py  util.py  vector_store.py
tcode/providers/: __init__.py  anthropic_adapter.py  azure_openai_adapter.py  base.py  errors.py  factory.py  gemini_adapter.py  litellm_adapter.py  ollama_adapter.py  openai_adapter.py
tcode/skills/: loader.py
tcode/tests/: tcode_test_plan_exit.py  tcode_test_todo_evaluator.py  test_abort.py  test_agent_defs.py  test_agent_loop.py  test_anthropic_adapter.py  test_command.py  test_compose_messages.py  test_config.py  test_errors_retry.py  test_integration.py  test_litellm_live.py  test_openai_adapter.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_skills.py  test_stdio_mcp.py  test_weather_mcp.py
tcode/tui/: __init__.py  bridge.py  state.py  theme.py
tcode/tui/screens/: home.py  session.py
tcode/tui/widgets/: footer_bar.py  (+4 more)
